--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -30,12 +30,7 @@ jobs:
           plugin_activity_load: 300
           plugin_activity_visibility: all
           plugin_contributors: yes
-          plugin_contributors_categories: {
-  "📚 Documentation": ["README.md", "docs/**"],
-  "💻 Code": ["source/**", "src/**"],
-  "#️⃣ Others": ["*"]
-}
-
+          plugin_contributors_categories: {"📚 Documentation": ["README.md", "docs/**"], "💻 Code": ["source/**", "src/**"], "#️⃣ Others": ["*"]}
           plugin_contributors_contributions: yes
           plugin_contributors_head: master
           plugin_contributors_ignored: github-actions[bot], dependabot[bot], dependabot-preview[bot]
@@ -78,7 +73,7 @@ jobs:
           plugin_reactions_limit: 200
           plugin_reactions_limit_issues: 100
           plugin_repositories: 100
-          plugin_repositories: yes
+          repositories: yes
           plugin_repositories_affiliations: owner
           plugin_repositories_batch: 100
           plugin_repositories_forks: yes
