--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -30,7 +30,7 @@ jobs:
           plugin_activity_load: 300
           plugin_activity_visibility: all
           plugin_contributors: yes
-          plugin_contributors_categories: {"📚 Documentation": ["README.md", "docs/**"], "💻 Code": ["source/**", "src/**"], "#️⃣ Others": ["*"]}
+          plugin_contributors_categories: '{"📚 Documentation": ["README.md", "docs/**"], "💻 Code": ["source/**", "src/**"], "#️⃣ Others": ["*"]}'
           plugin_contributors_contributions: yes
           plugin_contributors_head: master
           plugin_contributors_ignored: github-actions[bot], dependabot[bot], dependabot-preview[bot]
