--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -22,7 +22,7 @@ jobs:
           config_timezone: Europe/Berlin
           plugin_achievements: yes
           plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
+          plugin_achievements_threshold: X
           plugin_activity: yes
           plugin_activity_days: 14
           plugin_activity_filter: all
@@ -73,7 +73,7 @@ jobs:
           plugin_reactions_limit: 200
           plugin_reactions_limit_issues: 100
           plugin_repositories: 100
-          repositories: yes
+          repositories: no
           plugin_repositories_affiliations: owner
           plugin_repositories_batch: 100
           plugin_repositories_forks: yes
