--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -47,7 +47,7 @@ jobs:
           plugin_introduction_title: yes
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
-          plugin_languages: yes
+          plugin_languages: no
           plugin_languages_colors: github
           plugin_languages_limit: 8
           plugin_languages_recent_days: 0
@@ -72,8 +72,8 @@ jobs:
           plugin_reactions_ignored: github-actions[bot], dependabot[bot], dependabot-preview[bot]
           plugin_reactions_limit: 200
           plugin_reactions_limit_issues: 100
-          plugin_repositories: 100
-          repositories: no
+          repositories: 100
+          plugin_repositories: no
           plugin_repositories_affiliations: owner
           plugin_repositories_batch: 100
           plugin_repositories_forks: yes
