--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -73,10 +73,8 @@ jobs:
           plugin_reactions_limit: 200
           plugin_reactions_limit_issues: 100
           repositories: 100
-          plugin_repositories: no
-          plugin_repositories_affiliations: owner
-          plugin_repositories_batch: 100
-          plugin_repositories_forks: yes
+          repositories_affiliations: owner
+          repositories_batch: 100
           plugin_skyline: yes
           plugin_skyline_frames: 60
           plugin_skyline_quality: 0.5
